Nettoyage et adaptation pour les écrans

--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <script src='https://framatalk.org/external_api.js'></script>
     <!-- <script src='https://meet.jit.si/external_api.js'></script> -->
-    <div id="rimbaud"></div>
-    <div id="meet" class="meet"></div>
-    <div id="popup" class="centered">Appuyez sur le bouton pour commencer</div>
-    <div id="infos">
-        <!--  <div class="left-shape"></div> -->
-        <!-- <div class="wrap"> -->
-        <div class="split"></div>
-        <!-- </div> -->
-        <!-- <div class="right-shape"></div> -->
-        <div class="signature"><img src="img/Arthur_Rimbaud_signature.svg" /></div>
-    </div>
 
+    <div class="main">
+        <div id="rimbaud"></div>
+        <div id="meet" class="meet"></div>
+        <div id="popup" class="centered">Appuyez sur le bouton pour commencer</div>
+        <div id="infos">
+            <div class="split"></div>
+            <div class="signature"><img src="img/Arthur_Rimbaud_signature.svg" /></div>
+        </div>
+    </div>
     <script type="text/javascript" src="js/rimbaud.js"></script>
     <script type="text/javascript" src="js/quoteRotator.js"></script>
 </body>
